--- a/Proyecto01/Contenedores/css/style.css
+++ b/Proyecto01/Contenedores/css/style.css
@@ -1,3 +1,9 @@
 *{
     background-color: salmon;
 }
+.titulo{
+    border-style: solid;
+    border-color: aqua;
+    width: 100%;
+    height: 20%;
+}
