--- a/Proyecto01/Contenedores/css/style.css
+++ b/Proyecto01/Contenedores/css/style.css
@@ -3,7 +3,7 @@
 }
 .titulo{
     border-style: solid;
-    border-color: aqua;
+    border-color: rgb(13, 202, 250);
     width: 100%;
     height: 20%;
 }
