--- a/Proyecto01/css/h1.css
+++ b/Proyecto01/css/h1.css
@@ -1,6 +1,15 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+html{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+}
 header{
     text-align: center;
-    font-size: 3em;
+    /* font-size: 3em; */
 }
 #contenedores{
     width: 20%;
