--- a/Proyecto01/contenedores/css/style.css
+++ b/Proyecto01/contenedores/css/style.css
@@ -7,7 +7,16 @@
     width: 100%;
     height: 20%;
 }
+#amarillo{
+    float: left;
+    clear: right;
+}
 #verde{
     float: left;
     clear: right;
+}
+#marron{
+    float: left;
+    clear: right;
+
 }
