--- a/Proyecto01/css/h1.css
+++ b/Proyecto01/css/h1.css
@@ -14,6 +14,6 @@ header{
 #contenedores{
     width: 20%;
     height: 20%;
-    border: black,1em,solid;
+    border: 2em solid black ;
     background-color: aquamarine;
 }
