--- a/Proyecto01/css/h1.css
+++ b/Proyecto01/css/h1.css
@@ -1,3 +1,7 @@
+body{
+    height: 100vh;
+    width: 100vw;
+}
 *{
     padding: 0;
     margin: 0;
@@ -14,6 +18,6 @@ header{
 #contenedores{
     width: 20%;
     height: 20%;
-    border: 2em solid black ;
+    border: 2px solid black ;
     background-color: aquamarine;
 }
