--- a/Proyecto01/css/h1.css
+++ b/Proyecto01/css/h1.css
@@ -16,8 +16,23 @@ header{
     /* font-size: 3em; */
 }
 #contenedores{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 20%;
     height: 20%;
     border: 2px solid black ;
     background-color: aquamarine;
+    float: left;
+    clear: right;
+}
+#reciclaje{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
+    height: 20%;
+    border: 2px solid black ;
+    background-color: blueviolet;
+
 }
