--- a/Proyecto01/css/h1.css
+++ b/Proyecto01/css/h1.css
@@ -1,7 +1,3 @@
-body{
-    height: 100vh;
-    width: 100vw;
-}
 *{
     padding: 0;
     margin: 0;
@@ -11,9 +7,14 @@ html{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
 }
+body{
+    height: 100vh;
+    width: 100vw;
+}
 header{
     text-align: center;
     /* font-size: 3em; */
+    border: 1px solid red;
 }
 #contenedores{
     display: flex;
