--- a/Proyecto01/css/h1.css
+++ b/Proyecto01/css/h1.css
@@ -10,10 +10,13 @@ html{
 body{
     height: 100vh;
     width: 100vw;
+    background: rgb(143, 194, 218);
+    
 }
 header{
+    text-shadow: 2px 2px 2px #000000;
     text-align: center;
-    /* font-size: 3em; */
+    padding: 1rem;
     border: 1px solid red;
 }
 #contenedores{
