--- a/Proyecto01/css/h1.css
+++ b/Proyecto01/css/h1.css
@@ -15,6 +15,8 @@ body{
 }
 header{
     text-shadow: 2px 2px 2px #000000;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,0) 0%, rgba(9,9,121,1) 35%, rgba(6,44,166,1) 65%, rgba(0,212,255,0) 100%);
     text-align: center;
     padding: 1rem;
     border: 1px solid red;
@@ -38,5 +40,15 @@ header{
     height: 20%;
     border: 2px solid black ;
     background-color: blueviolet;
+
+}
+#curiosidades{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
+    height: 20%;
+    border: 2px solid black ;
+    background-color: salmon;
 
 }
