cambios en color de login/register

--- a/Proyecto01/css/h1.css
+++ b/Proyecto01/css/h1.css
@@ -29,7 +29,7 @@ header h1{
 }
 button {
     padding: 0.8em 1.8em;
-    border: 2px solid #17C3B2;
+    border: 2px solid salmon;
     position: relative;
     overflow: hidden;
     background-color: transparent;
@@ -39,7 +39,7 @@ button {
     transition: .3s;
     z-index: 1;
     font-family: inherit;
-    color: #17C3B2;
+    color: salmon;
 }
    
 button::before {
@@ -50,7 +50,7 @@ button::before {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) rotate(45deg);
-    background: #17C3B2;
+    background: salmon;
     transition: .5s ease;
     display: block;
     z-index: -1;
