--- a/Proyecto01/css/h1.css
+++ b/Proyecto01/css/h1.css
@@ -93,7 +93,8 @@ button:hover {
     height: 20%;
     border: 2px solid black ;
     background-color: blueviolet;
-
+    float: left;
+    clear: right;
 }
 #curiosidades{
     display: flex;
