--- a/Proyecto01/css/h1.css
+++ b/Proyecto01/css/h1.css
@@ -11,7 +11,8 @@ body{
     height: 100vh;
     width: 100vw;
     background: rgb(143, 194, 218);
-    
+    display: flex;
+    justify-content: space-around;
 }
 header{
     text-shadow: 2px 2px 2px #000000;
