Estilo para el contenedorGrande h1.css

--- a/Proyecto01/css/h1.css
+++ b/Proyecto01/css/h1.css
@@ -105,3 +105,9 @@ button:hover {
     background-color: salmon;
 
 }
+#contenedorGrande{
+width: 100%;
+heigth: 80%;
+display: flex;
+justify-content: space-around;
+}
