--- a/Proyecto01/css/h1.css
+++ b/Proyecto01/css/h1.css
@@ -77,8 +77,7 @@ button:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 20%;
-    height: 20%;
+    width: 20%;
     border: 2px solid black ;
     background-color: aquamarine;
     float: left;
@@ -89,7 +88,6 @@ button:hover {
     justify-content: center;
     align-items: center;
     width: 20%;
-    height: 20%;
     border: 2px solid black ;
     background-color: blueviolet;
     float: left;
@@ -99,15 +97,14 @@ button:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 20%;
-    height: 20%;
+    width: 20%;
     border: 2px solid black ;
     background-color: salmon;
 
 }
 #contenedorGrande{
 width: 100%;
-heigth: 100px;
+heigth: 80%;
 display: flex;
 justify-content: space-around;
 }
