--- a/Proyecto01/css/h1.css
+++ b/Proyecto01/css/h1.css
@@ -104,7 +104,7 @@ button:hover {
 }
 #contenedorGrande{
 width: 100%;
-heigth: 80%;
+height: 80%;
 display: flex;
 justify-content: space-around;
 background-color: black;
