--- a/Proyecto01/css/h1.css
+++ b/Proyecto01/css/h1.css
@@ -77,7 +77,8 @@ button:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 20%;
+    width: 20%;
+    height: 20%;
     border: 2px solid black ;
     background-color: aquamarine;
     float: left;
@@ -88,6 +89,7 @@ button:hover {
     justify-content: center;
     align-items: center;
     width: 20%;
+    height: 20%;
     border: 2px solid black ;
     background-color: blueviolet;
     float: left;
@@ -97,7 +99,8 @@ button:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 20%;
+    width: 20%;
+    height: 20%;
     border: 2px solid black ;
     background-color: salmon;
 
@@ -108,5 +111,4 @@ height: 30%;
 display: flex;
 justify-content: space-around;
 aling-items:center;
-background-color: black;
 }
