cambios en el tamaño del titulo

--- a/Proyecto01/css/h1.css
+++ b/Proyecto01/css/h1.css
@@ -26,6 +26,7 @@ header{
 header h1{
     color: wheat;
     font-family: 'Croissant One', cursive;
+    font-size: 40px;
 }
 button {
     padding: 0.8em 1.8em;
