--- a/Proyecto01/css/h1.css
+++ b/Proyecto01/css/h1.css
@@ -22,11 +22,16 @@ header{
 
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
 header h1{
     color: wheat;
     font-family: 'Croissant One', cursive;
     font-size: 40px;
+}
+header img{
+    width: 10%;
+    height: 10%;
 }
 button {
     padding: 0.8em 1.8em;
@@ -120,9 +125,9 @@ align-items:center;
 }
 aside{
     width: 100%;
-
+    height: 14%;
 }
 #forms{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
 }
