--- a/Proyecto01/css/h1.css
+++ b/Proyecto01/css/h1.css
@@ -91,6 +91,7 @@ button:hover {
     float: left;
     clear: right;
     font-family: 'Croissant One', cursive;
+    font-size: xx-large;
 }
 #reciclaje{
     display: flex;
@@ -103,6 +104,7 @@ button:hover {
     float: left;
     clear: right;
     font-family: 'Croissant One', cursive;
+    font-size: xx-large;
 }
 #curiosidades{
     display: flex;
@@ -113,7 +115,7 @@ button:hover {
     border: 2px solid black ;
     background-color: salmon;
     font-family: 'Croissant One', cursive;
-
+    font-size: xx-large;
 }
 #contenedorGrande{
 
