--- a/Proyecto01/contenedores/css/style.css
+++ b/Proyecto01/contenedores/css/style.css
@@ -16,6 +16,10 @@ header{
     display: flex;
     justify-content: space-around;
     align-items: center;
+    position: sticky; 
+    z-index: 100;
+    top:0;
+    width: 100vw;
 }
 
 header h1{
