--- a/Proyecto01/contenedores/cubos/CSS/verde.css
+++ b/Proyecto01/contenedores/cubos/CSS/verde.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("./fondo4.jpg");
+    background-image: url("..imagen/fondo4.jpg");
 }
 #centrado{
     display: flex;
