nueva fuente para el titulo

--- a/Proyecto01/formulario/css/cssLogin.css
+++ b/Proyecto01/formulario/css/cssLogin.css
@@ -16,7 +16,7 @@ body{
     flex-wrap: wrap;
 }
 #titulo{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Salsa', cursive;
     font-size: x-large;
     clear: right;
 }
