--- a/Proyecto01/formulario/css/cssRegister.css
+++ b/Proyecto01/formulario/css/cssRegister.css
@@ -11,14 +11,20 @@ body{
     width:70%;
     background-color: rgb(64, 63, 71);
     color: antiquewhite;
-    text-align: center;
+    
+   
 }
 #titulo{
-    clear: right;
-    background-color: black;
+    text-align: center;
 }
 #formulario{
+    margin: auto;
+    text-align: center;
     background-color: blueviolet;
     height:60%;
+    width: 80%;
     font-size: x-large;
+    border: none;
+    border-radius: 20px;
+    
 }
