--- a/Proyecto01/reciclaje/css/style.css
+++ b/Proyecto01/reciclaje/css/style.css
@@ -5,5 +5,8 @@ body{
 #tablaReciclaje{
     height: 50%;
     width: 50%;
-    border: 1px black solid ;
+    border: 1px solid black;
+}
+#tablaReciclaje td{
+    border: 1px solid black;
 }
