--- a/Proyecto01/reciclaje/css/style.css
+++ b/Proyecto01/reciclaje/css/style.css
@@ -1,6 +1,8 @@
 body{
     width: 100%;
     height: 100vh;
+    background-image: url(../img/pattern\ reciclaje.jpg);
+    background-repeat: repeat;
 }
 #tablaReciclaje{
     height: 50%;
