--- a/Proyecto01/reciclaje/css/style.css
+++ b/Proyecto01/reciclaje/css/style.css
@@ -3,6 +3,7 @@ body{
     height: 100vh;
     background-image: url(../img/pattern\ reciclaje.jpg);
     background-repeat: repeat;
+    padding: none;
 }
 #tablaReciclaje{
     height: 50%;
@@ -16,5 +17,8 @@ body{
     font-size: x-large;
 }
 #titulo{
+    margin-top: -20px;
     background: linear-gradient(90deg, rgb(46, 221, 69)0%,rgb(96, 216, 134) 20%, rgb(97, 196, 151) 40%, rgb(67, 135, 134) 60%, rgb(27, 105, 128) 80%);
+    font-family: 'Kanit', sans-serif;
+    text-align: center;
 }
