--- a/Proyecto01/reciclaje/css/style.css
+++ b/Proyecto01/reciclaje/css/style.css
@@ -20,6 +20,13 @@ body{
 #titulo{
     margin-top: -20px;
     background: linear-gradient(90deg, rgb(46, 221, 69)0%,rgb(96, 216, 134) 20%, rgb(97, 196, 151) 40%, rgb(67, 135, 134) 60%, rgb(27, 105, 128) 80%);
+    font-size: xx-large;
     font-family: 'Kanit', sans-serif;
     text-align: center;
+}
+#main{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
