--- a/Proyecto01/css/h1.css
+++ b/Proyecto01/css/h1.css
@@ -74,6 +74,7 @@ button:hover {
 
 
 .contenedores{
+    text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
