--- a/Proyecto01/css/h1.css
+++ b/Proyecto01/css/h1.css
@@ -112,7 +112,7 @@ button:hover {
     95%{color:rgb(58, 233, 102)}
     100%{color:rgb(67, 224, 128)}
     }
-/* #reciclaje{
+#reciclaje{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -140,7 +140,7 @@ button:hover {
     font-size: xx-large;
     animation: title-color infinite 5s;
     cursor: pointer;
-} */
+}
 #contenedorGrande{
 
 width: 100%;
