--- a/Proyecto01/css/h1.css
+++ b/Proyecto01/css/h1.css
@@ -12,7 +12,7 @@ body{
     width: 100vw;
     background: rgb(143, 194, 218);
 }
-header{
+/* header{
     text-shadow: 2px 2px 2px #000000;
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,0) 0%, rgba(9,9,121,1) 35%, rgba(6,44,166,1) 65%, rgba(0,212,255,0) 100%);
@@ -69,7 +69,7 @@ button:hover::before {
    
 button:hover {
     color: #111;
-}
+} */
 
 
 
