--- a/Proyecto01/contenedores/cubos/CSS/aceite.css
+++ b/Proyecto01/contenedores/cubos/CSS/aceite.css
@@ -1,13 +1,21 @@
-#centrado{
-    display: flex;
-    justify-content: center;
+body{
+    height: auto;
 }
-.imagen{
-    width: 100%;
+.volver{
+    float: left;
+    width: 8%;
     height: 20%;
 }
 
+.imagen{ 
+    width: 70%;
+    height: 20%;
+    margin-left: 15%;
+}
+
 .frase{
+    display: flex;
+    justify-content: center;
     width: 65%;
     height: 10%;
     /*font-family: Arial, Helvetica, sans-serif;*/
